RWA-3813 Fix code smells (#785)
* RWA-3813 Fix code smells